--- a/css/style.css
+++ b/css/style.css
@@ -218,7 +218,9 @@ nav ul li a {
 }
 
 .logo {
-  float: left;
+	float: left;
+	font-weight: bolder;
+	font-size: 1.75em;
 }
 
 .logo img {
@@ -240,7 +242,7 @@ nav ul li a {
 /*-----------------------------------------------------------------------------------*/
 
 #header {
-  background: url("../images/home-bg.jpg") repeat scroll center center / cover;
+  background: url("../images/me1.jpg") repeat scroll center center / cover;
   height: 100vh;
   width: 100%;
 }
