--- a/style.css
+++ b/style.css
@@ -168,6 +168,7 @@ a:visited {
 .indented-text {
   text-indent: 50px;
   font-size: 18px;
+  margin-right: 1vw;
 }
 
 .about-text p {
@@ -700,7 +701,7 @@ a:visited {
 }
 
 ::-webkit-scrollbar-track {
-  background-color: #e4e4e4;
+  background-color: #fffffe;
   border-radius: 100px;
 }
 
