--- a/style.css
+++ b/style.css
@@ -600,6 +600,12 @@ a:visited {
     bottom:-25vh;
     left:60vw;
   }
+
+  #about-photo {
+    height: auto;
+    width: 30vw;
+    bottom: -10vh;
+  }
 }
 
 @media screen and (max-width: 767px) {
